hphp/test/quick/unwind_backtrace.php.expectf
wat
~something

Notice: Undefined index: object in %s on line 10
NULL

Fatal error: Uncaught exception 'Exception' with message 'asd' in %s/hphp/test/quick/unwind_backtrace.php:4
Stack trace:
#0 %s/hphp/test/quick/unwind_backtrace.php(22): blah()
#1 %s/hphp/test/quick/unwind_backtrace.php(28): Bar->foo()
#2 %s/hphp/test/quick/unwind_backtrace.php(31): main()
#3 {main}
